--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -34,7 +34,7 @@
   "Choose Your Language": "Choose Your Language",
   "circle": "circle",
   "Click x1 times on number x2!": "Click x1 times on number x2!",
-  "Cone":"cone",
+  "cone":"cone",
   "Confirm": "Confirm",
   "Contact Us": "Contact us",
   "Continue": "Continue",
