--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -245,5 +245,6 @@
   "7 boys ride their bikes. Some of the boys go home. 5 boys continue riding their bikes. How many boys went home?":"7 boys ride their bikes. Some of the boys go home. 5 boys continue riding their bikes. How many boys went home?",
   "8 birds sat on a tree branch. Some flew away. Now there are 3 birds on the branch. How many birds flew away?":"8 birds sat on a tree branch. Some flew away. Now there are 3 birds on the branch. How many birds flew away?",
   "10 sides":"10 sides",
-  "20 students were equally divided into 4 groups by the teacher. How many students are in each group?":"20 students were equally divided into 4 groups by the teacher. How many students are in each group?"
+  "20 students were equally divided into 4 groups by the teacher. How many students are in each group?":"20 students were equally divided into 4 groups by the teacher. How many students are in each group?",
+  "Add Teacher":"Add Teacher"
 }
