added some more missing words in i18n jason file

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -123,6 +123,7 @@
   "parallelogram":"Parallelogram",
   "Pankaj has 7 plums. Kapil has 4 more plums than Pankaj. How many plums does Kapil have?":"Pankaj has 7 plums. Kapil has 4 more plums than Pankaj. How many plums does Kapil have?",
   "Parent":"Parent",
+  "pentagon":"pentagon",
   "Phone number :": "Phone number :",
   "Prakash has 4 marbles. Sakshi gives Prakash some marbles and now he has 6 marbles in all. How many marbles did Sakshi give Prakash?":"Prakash has 4 marbles. Sakshi gives Prakash some marbles and now he has 6 marbles in all. How many marbles did Sakshi give Prakash?",
   "Prakash read 6 pages of his book before lunch. After lunch he read some more. If Prakash read 9 pages in all, how many pages did he read after lunch?":"Prakash read 6 pages of his book before lunch. After lunch he read some more. If Prakash read 9 pages in all, how many pages did he read after lunch?",
@@ -205,6 +206,7 @@
   "three": "three",
   "Tina borrowed 11 books from the library. Her friend borrowed 5 books. How many more books did Tina borrow than her friend?":"Tina borrowed 11 books from the library. Her friend borrowed 5 books. How many more books did Tina borrow than her friend?",
   "Tinku's dog gave birth to some puppies. Tinku gave 6 puppies to his friends. Now he has 2 puppies left. How many puppies did his dog give birth to?":"Tinku's dog gave birth to some puppies. Tinku gave 6 puppies to his friends. Now he has 2 puppies left. How many puppies did his dog give birth to?",
+  "trapezoid":"trapezoid",
   "triangle":"triangle",   
   "Tom has 6 books. James has 2 books. How many books do they have in all?":"Tushar has 6 books. James has 2 books. How many books do they have in all?",
   "Tushar planted 5 seeds in a school garden. Jaya planted 8 seeds. How many fewer seeds did Tushar plant than Jaya?":"Tushar planted 5 seeds in a school garden. Jaya planted 8 seeds. How many fewer seeds did Tushar plant than Jaya?",
