Added some translations and removed hot update

--- a/assets/resources/lang/fr/i18n.json
+++ b/assets/resources/lang/fr/i18n.json
@@ -7,8 +7,8 @@
   "A football team scored 3 goals in the first half. Then they scored more goals in the second half. They won the game with 5 goals! How many goals did they score in the second half?":"Une équipe de football a marqué 3 buts en première mi-temps. Ensuite, elle a marqué d'autres buts en deuxième mi-temps. Ils ont gagné le match avec 5 buts ! Combien de buts ont-ils marqué en deuxième mi-temps ?",
   "A man was carrying balloons but the wind blew 6 away. He has 2 balloons left. How many balloons did he start with?":"Un homme portait des ballons mais le vent en a emporté 6. Il lui reste 2 ballons. Avec combien de ballons a-t-il commencé ?",
   "A piece of wood is 13 inches long. It is cut into two parts. One part is 6 inches long. How long is the other part?":"Un morceau de bois mesure 13 cm de long. Il est coupé en deux parties. Une partie fait 6 cm de long. Quelle est la longueur de l'autre partie ?",
-  "Achievements": "Achievements",
-  "Age   :": "Age   :",
+  "Achievements": "Réalisations",
+  "Age   :": "Âge   :",
   "Allie bought 2 boxes of mangos. Each box has 4 mangos. How many mangos did she buy?": "Allie a acheté 2 boîtes de mangues. Chaque boîte contient 4 mangues. Combien de mangues a-t-elle achetées ?",
   "Amy walks 4 blocks to school. Jane walks 2 blocks to school. How many more blocks does Amy walk than Jane to school?":"Amy traverse 4 rues pour aller à l'école. Jane traverse 2 rues pour aller à l'école. Combien de rues Amy fait-elle de plus que Jane pour aller à l'école ?",
   "Ana has 7 cookies. She eats 2 of them. How many cookies does she have left?":"Ana a 7 biscuits. Elle en mange 2. Combien de biscuits lui reste-t-il ?",
@@ -16,25 +16,25 @@
   "Anita has 5 books. 3 of them are science books and the rest are storybooks. How many are storybooks?":"Anita a 5 livres. Trois d'entre eux sont des livres de science et le reste sont des livres d'histoire. Combien y a-t-il de livres d'histoires ?",
   "App Language :": "App Language :",
   "apples":"apples",  
-  "Backgrounds": "Backgrounds",
+  "Backgrounds": "Arrière-plans",
   "Begin Quiz": "Begin Quiz",
   "Beth has 13 flowers in her garden. Kate has 8 flowers. How many more flowers does Beth have than Kate?":"Beth a 13 fleurs dans son jardin. Kate a 8 fleurs. Combien de fleurs Beth a-t-elle en plus que Kate ?",
   "Billy has 2 marbles. Audrey has 3 more marbles than Billy. How many marbles does Audrey have?":"Billy a 2 billes. Audrey a 3 billes de plus que Billy. Combien de billes a Audrey ?",
   "Bobby bought 3 more books than Gabby. Gabby bought a book. How many books did Bobby buy?":"Bobby a acheté 3 livres de plus que Gabby. Gabby a acheté un livre. Combien de livres Bobby a-t-il acheté ?",
   "Bob has 4 pencils and his sister has 8 more pencils than him. How many pencils does Bob's sister have?":"Bob a 4 crayons et sa sœur en a 8 de plus que lui. Combien de crayons la sœur de Bob a-t-elle ?",
   "books":"books",
-  "Boy": "Boy",
+  "Boy": "Garçon",
   "Brad has 17 balloons. 8 balloons are red and the rest are green. How many balloons are green?":"Brad a 17 ballons. 8 ballons sont rouges et les autres sont verts. Combien de ballons sont verts ?",
   "Brittany has 7 shirts in her closet.3 of them are blue and the rest are green. How many green shirts does she have?":"Brittany a 7 chemises dans son placard. Trois d'entre elles sont bleues et les autres sont vertes. Combien de chemises vertes a-t-elle ?",    
-  "Cancel": "Cancel",
+  "Cancel": "Annuler",
   "Cannot verify OTP": "Cannot verify OTP",
-  "Challenge": "Challenge",
-  "Friends": "Friends",
+  "Challenge": "Défi",
+  "Friends": "Animaux",
   "Children are drawing pictures to decorate their classroom. The boys draw 11 pictures and the girls draw 20. How many more pictures do girls draw than boys?":"Les enfants font des dessins pour décorer leur classe. Les garçons font 11 dessins et les filles 20. Combien de dessins les filles font-elles de plus que les garçons ?",
-  "Choose your avatar": "Choose your avatar",
+  "Choose your avatar": "Choisissez votre avatar",
   "Choose Your Language": "Choose Your Language",
   "circle": "cercle",
-  "Click x1 times on number x2!": "Click x1 times on number x2!",
+  "Click x1 times on number x2!": "Cliquez x1 fois sur le numéro x2!",
   "cone":"cône",
   "Confirm": "Confirm",
   "Contact Us": "Contact us",
@@ -52,28 +52,28 @@
   "Enter the 6-digit otp here...": "Enter the 6-digit otp here...",
   "Ernest makes 5 paper airplanes. Nicole makes 14 paper airplanes. How many fewer paper airplanes does Ernest make than Nicole?":"Ernest fabrique 5 avions en papier. Nicole fabrique 14 avions en papier. Combien d'avions en papier Ernest fabrique-t-il de moins que Nicole ?",
   "Error downloading content. Please connect to internet and try again": "Error downloading content. Please connect to internet and try again",
-  "EXIT ?": "EXIT ?",
+  "EXIT ?": "SORTIE ?",
   "Facebook": "Facebook",
   "five": "cinq",
   "fish":"fish",
-  "Follow Us": "Follow Us",
+  "Follow Us": "Suivez nous",
   "Fred is 12 years old. His brother Tom is 8 years old. How much younger is Tom than Fred?":"Fred a 12 ans. Son frère Tom a 8 ans. Combien d'années Tom a de moins que son frère?",
   "four": "quatre",
   "Gabby worked 4 more hours than Ian. Ian worked 8 hours. How many hours did Gabby work?":"Gabby a travaillé 4 heures de plus que Ian. Ian a travaillé 8 heures. Combien d'heures Gabby a-t-elle travaillé ?",
-  "Game Over": "Game Over",
-  "Gender :": "Gender :",
-  "Gender": "Gender",
+  "Game Over": "Jeu terminé",
+  "Gender :": "Le sexe :",
+  "Gender": "Le sexe",
   "George went to a store and bought some t-shirts. He went to another store and bought 2 more t-shirts. He bought a total of 7 t-shirts. How many t-shirts did he buy at the first store?":"Georges est allé dans un magasin et a acheté des t-shirts. Il est allé dans un autre magasin et a acheté deux autres t-shirts. Il a acheté 7 t-shirts au total. Combien de t-shirts a-t-il acheté dans le premier magasin ?",
-  "Girl": "Girl",
+  "Girl": "Fille",
   "Harper and Raven drew 8 pictures together. Harper drew 3 pictures. How many pictures did Raven draw?":"Harper et Raven ont fait 8 dessins ensemble. Harper a fait 3 dessins. Combien de dessins Raven a-t-elle fait ?",
   "Hannah makes 8 loaves of bread. She gives 3 loaves of bread to her cousin. How many loaves of bread does she have left?":"Hannah fabrique 8 pains. Elle donne 3 pains à son cousin. Combien de pains lui reste-t-il ?",
   "Helen saw 12 birds in a tree and 7 birds in another tree. How many birds did she see altogether?":"Helen a vu 12 oiseaux dans un arbre et 7 oiseaux dans un autre arbre. Combien d'oiseaux a-t-elle vus en tout ?",
-  "Help": "Help",
-  "Help?": "Help?",
+  "Help": "Aidez-moi",
+  "Help?": "Aidez-moi?",
   "Henry has 4 stamps. Eric has 5 more stamps than Henry. How many stamps does Eric have?":"Henry a 4 timbres. Eric a 5 timbres de plus qu'Henry. Combien de timbres a Éric ?",
   "hexagon":"hexagon",
-  "Home": "Home",
-  "How Many??": "How Many??",
+  "Home": "Accueil",
+  "How Many??": "Combien???",
   "hundred": "cent",
   "I have 10 apples. I eat some apples. I have 4 apples left. How many apples did I eat?":"J'ai 10 pommes. Je mange quelques pommes. Il me reste 4 pommes. Combien de pommes ai-je mangé ?",
   "Instagram": "Instagram",
@@ -100,6 +100,7 @@
   "Kyle got 3 new shirts on his birthday. He already had 5 shirts. How many shirts does he have now?":"Kyle a reçu 3 nouvelles chemises pour son anniversaire. Il en avait déjà 5. Combien de chemises a-t-il maintenant ?",
   "Laci and Kendra caught 14 fireflies altogether. Laci caught 5 fireflies. How many fireflies did Kendra catch?":"Laci et Kendra ont attrapé 14 lucioles en tout. Laci a attrapé 5 lucioles. Combien de lucioles Kendra a-t-elle attrapé ?",
   "Lena has 12 books. She donates 8 books to her class library. How many books does Lena have left?":"Lena a 12 livres. Elle fait don de 8 livres à la bibliothèque de sa classe. Combien de livres reste-t-il à Léna ?",
+  "Library": "Bibliothèque",
   "Literacy": "Literacy",
   "Lucy has 8 pencils. She loses 7 of them. How many pencils does Lucy have left?":"Lucy a 8 crayons. Elle en perd 7. Combien de crayons reste-t-il à Lucy ?", 
   "Lucy is 9 years old. Her sister Julie is@6 years old. How much older is Lucy than her sister Julie?":"Lucy a 9 ans. Sa sœur Julie a 6 ans. Combien d'années de plus Lucy a par rapport à sa sœur Julie ?",
@@ -124,14 +125,14 @@
   "Ms. Hannah is playing a hide-and-seek game with her 11 students. She finds 3 students. How many students are still hiding?":"Mme Hannah joue à cache-cache avec ses 11 élèves. Elle trouve 3 élèves. Combien d'élèves se cachent encore ?",
   "Ms. Jones ordered 8 bags of sugar. 5 bags are delivered today. The rest will be delivered tomorrow. How many bags of sugar will be delivered tomorrow?":"Mme Jones a commandé 8 sacs de sucre. 5 sacs sont livrés aujourd'hui. Le reste sera livré demain. Combien de sacs de sucre seront livrés demain ?",
   "Ms. Dawson has 12 students in her class. Some students are absent and 7 students are present. How many students are absent?":"Mme Dawson a 12 élèves dans sa classe. Certains élèves sont absents et 7 élèves sont présents. Combien d'élèves sont absents ?",
-  "Name   :": "Name   :",
-  "Name":"Name :",
+  "Name   :": "Nom   :",
+  "Name":"Nom :",
   "Nassir picks up a 17-page book. He reads 9 pages. How many pages does he have left to read?":"Nassir prend un livre de 17 pages. Il lit 9 pages. Combien de pages lui reste-t-il à lire ?",
   "New Level Unlocked": "New Level Unlocked",
   "New World Unlocked": "New World Unlocked",
   "Nick has 13 oranges. He eats 5 of them. How many oranges does he have left?":"Nick a 13 oranges. Il en mange 5. Combien d'oranges lui reste-t-il ?",
   "nine": "neuf",
-  "OK": "OK",
+  "OK": "D'accord",
   "one": "un",
   "oval":"ovale",
   "parallelogram":"parallélogramme",
@@ -140,14 +141,14 @@
   "Peter has 4 marbles. Sue gives Peter some marbles and now he has@6 marbles in all. How many marbles did Sue give Peter?":"Pierre a 4 billes. Sue donne des billes à Pierre et il en a maintenant 6 en tout. Combien de billes Sue a-t-elle données à Pierre ?",
   "Peter read 6 pages of his book before lunch. After lunch he read some more. If Peter read 9 pages in all, how many pages did he read after lunch?":"Pierre a lu 6 pages de son livre avant le déjeuner. Après le déjeuner, il en a lu d'autres. Si Pierre a lu 9 pages en tout, combien de pages a-t-il lu après le déjeuner ?",
   "Phone number :": "Phone number :",
-  "Profile": "Profile",
+  "Profile": "Profil",
   "Puzzle": "Puzzle",  
   "Rectangle":"Rectangle",
   "Remove Teacher?": "Remove Teacher?",
   "Remove User?": "Remove User?",
   "Report":"report",
   "Resend OTP": "Resend OTP",
-  "Rewards": "Rewards",
+  "Rewards": "Récompenses",
   "rhombus":"rhombus",
   "Shante picked 6 mangos from a tree. He put an equal number of mangos into 3 boxes. How many mangos did he put in each box?":"Sandeep picked 6 mangos from a tree. He put an equal number of mangos into 3 boxes. How many mangos did he put in each box?",
   "Sandy is 5 years old. Mia is 7 years older than Sandy. How old is Mia?":"Sandy a 5 ans. Mia a 7 ans de plus que Sandy. Quel âge a Mia ?",
@@ -157,7 +158,7 @@
   "Sarah picked 6 flowers. She put an equal number of flowers into 2 vases. How many flowers did she put in each vase?":"Sarah a cueilli 6 fleurs. Elle a mis une quantité égale de fleurs dans 2 vases. Combien de fleurs a-t-elle mises dans chaque vase ?",
   "Sara has 14 pencils in her bag. She let her friends borrow 7 of them. How many pencils does Sara have left?":"Sara a 14 crayons dans son sac. Elle a laissé ses amis en emprunter 7. Combien de crayons reste-t-il à Sarah ?",
   "School": "School",
-  "Setting": "Setting",
+  "Setting": "Réglage",
   "seven": "sept",
   "six": "six",  
   "Shelly bought 4 boxes of donuts. Each box contains 5 donuts. How many donuts did she buy altogether?":"Shelly a acheté 4 boîtes de beignets. Chaque boîte contient 5 beignets. Combien de beignets a-t-elle achetés en tout ?",
@@ -211,14 +212,14 @@
   "Tom planted 5 seeds in a school garden. Jane planted 8 seeds. How many fewer seeds did Tom plant than Jane?":"Tom a planté 5 graines dans le jardin d'une école. Jane a planté 8 graines. Combien de graines Tom a-t-il planté de moins que Jane ?",
   "Twitter": "Twitter",
   "two": "deux",
-  "User": "User",
+  "User": "Usager",
   "verified": "verified",
   "verifying...": "verifying...",
   "verify": "verify",  
   "Visit": "Visit",
   "We sent an OTP to verify your number.": "We sent an OTP to verify your number.",
-  "What is your name?": "What is your name?",
-  "What's your age?": "What's your age?",
+  "What is your name?": "Quel est votre nom?",
+  "What's your age?": "Quel âge as tu?",
   "WhatsApp": "WhatApp",
   "Which group is bigger?":"quel groupe est plus grand?",
   "Which is a circle?":"Which is a circle?",
