--- a/assets/resources/lang/fr/i18n.json
+++ b/assets/resources/lang/fr/i18n.json
@@ -49,7 +49,7 @@
   "eight": "huit",
   "Email": "Email",
   "Email :": "Email :",
-  "English": "English",
+  "English": "Anglais",
   "Enter the 6-digit otp here...": "Entrez l'otp à 6 chiffres ici ...",
   "Ernest makes 5 paper airplanes. Nicole makes 14 paper airplanes. How many fewer paper airplanes does Ernest make than Nicole?":"Ernest fabrique 5 avions en papier. Nicole fabrique 14 avions en papier. Combien d'avions en papier Ernest fabrique-t-il de moins que Nicole ?",
   "Error downloading content. Please connect to internet and try again": "Erreur lors du téléchargement du contenu. Veuillez vous connecter à Internet et réessayer",
@@ -83,6 +83,7 @@
   "It rained 8 days in January. It rained 9 more days in February than January. How many days did it rain in February?":"Il a plu 8 jours en janvier. En février, il a plu 9 jours de plus qu'en janvier. Combien de jours a-t-il plu en février ?",
   "It rained 15 days in March. It rained 8 days in April. How many more days did it rain in March than April?":"Il a plu 15 jours en mars. Il a plu 8 jours en avril. Combien de jours de pluie il y a-t-il eu mars par rapport à avril ?",
   "It takes Sally 7 minutes to run a mile. How long would it take her to run 4 miles?":"Il faut 7 minutes à Sally pour parcourir un kilomètre. Combien de temps lui faudrait-il pour parcourir 4 kilomètres ?",
+  "Jack's hen laid 6 eggs yesterday and 3 eggs today. How many eggs did Jack's hen lay in all?":"La poule de Jack a pondu 6 œufs hier et 3 œufs aujourd'hui. Combien d'œufs la poule de Jack a-t-elle pondue en tout?",
   "Jackie has 9 pencils. Adam has 5 more pencils than Jackie. How many pencils does Adam have?":"Jackie a 9 crayons. Adam a 5 crayons de plus que Jackie. Combien de crayons Adam a-t-il ?",
   "Jacob and Henry were reading the same book. Henry read 9 more pages than Jacob. Jacob read 11 pages of the book. How many pages did Henry read?":"Jacob et Henry lisaient le même livre. Henry a lu 9 pages de plus que Jacob. Jacob a lu 11 pages du livre. Combien de pages Henry a-t-il lu ?",
   "Jane has 9 balloons. 6 are green and the rest are blue. How many balloons are blue?":"Jane a 9 ballons. 6 sont verts et les autres sont bleus. Combien de ballons sont bleus ?",
