--- a/assets/resources/lang/fr/i18n.json
+++ b/assets/resources/lang/fr/i18n.json
@@ -175,7 +175,7 @@
   "Sydney found 20 seashells on the beach. Noah found 6 seashells. How many more seashells did Sydney find than Noah?":"Sydney a trouvé 20 coquillages sur la plage. Noah a trouvé 6 coquillages. Combien de coquillages Sydney a-t-elle trouvé de plus que Noah ?",
   "Diego has 11 mangos in a basket. Diego gives 4 mangos to his sister. How many mangos are left in the basket?":"Diego a 11 mangues dans un panier. Diego donne 4 mangues à sa sœur. Combien de mangues reste-t-il dans le panier ?",
   "tables":"les tables",
-  "Teacher  :": "Teacher  :",
+  "Teacher  :": "Professeur  :",
   "ten": "dix",
   "Tess picked 3 flowers in the morning. She picked some more flowers in the afternoon. If Tess picked 8 flowers in all, how many did she pick in the afternoon?":"Tess a cueilli 3 fleurs le matin. Elle en a cueilli d'autres l'après-midi. Si Tess a cueilli 8 fleurs au total, combien en a-t-elle cueillies l'après-midi ?",
   "The library has 5 more tables than the school office. The school office has 2 tables. How many tables does the library have?":"La bibliothèque a 5 tables de plus que le bureau de l'école. Le bureau de l'école a 2 tables. Combien de tables la bibliothèque possède-t-elle ?",
