--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -247,5 +247,6 @@
   "8 birds sat on a tree branch. Some flew away. Now there are 3 birds on the branch. How many birds flew away?":"एक पेड़ की शाखा पर 8 पक्षी बैठे हैं ।\nकुछ पक्षी उड़ गए।\nअब शाखा पर 3 पक्षी हैं।\nकितने पक्षी उड़ गए?",
   "10 sides":"10 भुजाएँ",
   "20 students were equally divided into 4 groups by the teacher. How many students are in each group?":"20 छात्रों को शिक्षक द्वारा 4 दलों में समान रूप से विभाजित किया गया था।\nप्रत्येक दाल में कितने छात्र हैं?",
-  "Add Teacher":"शिक्षक"
+  "Add Teacher":"शिक्षक",
+  "Match Numbers 1": "Faire correspondre les nombres 1"
 }
