Added miising question for question board game in i18n file

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -83,6 +83,7 @@
   "It rained 15 days in March. It rained 8 days in April. How many more days did it rain in March than April?":"It rained 15 days in March. It rained 8 days in April. How many more days did it rain in March than April?",
   "It takes Sally 7 minutes to run a mile. How long would it take her to run 4 miles?":"It takes Asha 7 minutes to run a mile. How long would it take her to run 4 miles?",
   "Jackie has 9 pencils. Adam has 5 more pencils than Jackie. How many pencils does Adam have?":"Naina has 9 pencils. Arjun has 5 more pencils than Naina. How many pencils does Arjun have?",
+  "Jack's hen laid 6 eggs yesterday and 3 eggs today. How many eggs did Jack's hen lay in all?":"Jack's hen laid 6 eggs yesterday and 3 eggs today. How many eggs did Jack's hen lay in all?",
   "Jacob and Henry were reading the same book. Henry read 9 more pages than Jacob. Jacob read 11 pages of the book. How many pages did Henry read?":"Jonny and Aryan were reading the same book. Aryan read 9 more pages than Jonny. Jonny read 11 pages of the book. How many pages did Aryan read?",
   "Jane has 9 balloons. 6 are green and the rest are blue. How many balloons are blue?":"Jaya has 9 balloons. 6 are green and the rest are blue. How many balloons are blue?",
   "Janet has 8 oranges and Sharon has 4 oranges. How many oranges do they have altogether?":"Seema has 8 oranges and Priya has 4 oranges. How many oranges do they have altogether?",
@@ -193,6 +194,7 @@
   "There are 9 children in a classroom. 6 of them are boys. How many girls are in the classroom?":"There are 9 children in a classroom. 6 of them are boys. How many girls are in the classroom?",
   "There are 9 kites flying in the sky. A wind blows 3 kites down on the ground. How many kites are still flying in the sky?":"There are 9 kites flying in the sky. A wind blows 3 kites down on the ground. How many kites are still flying in the sky?",
   "There are 10 plates at the dinner table. There are 5 more people than plates. How many people are at dinner?":"There are 10 plates at the dinner table. There are 5 more people than plates. How many people are at dinner?",
+  "There are 10 students on the school bus. 3 students get off the bus. How many students are left on the bus?":"There are 10 students on the school bus. 3 students get off the bus. How many students are left on the bus?",
   "There are 12 cats on a fence. 1 cat jumps down off of the fence. How many cats are left on the fence?":"There are 12 cats on a fence. 1 cat jumps down off of the fence. How many cats are left on the fence?",
   "There are 13 girls and 18 boys in a class. How many more boys are there than girls?":"There are 13 girls and 18 boys in a class. How many more boys are there than girls?",
   "There are 14 fish in a water tank. Kavya put 3 more fish into the tank. How many fish are there?":"There are 14 fish in a water tank. Kavya put 3 more fish into the tank. How many fish are there?",
