--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -83,6 +83,7 @@
   "It rained 15 days in March. It rained 8 days in April. How many more days did it rain in March than April?":"मार्च में 15 दिन बारिश हुई।\nअप्रैल में 8 दिन बारिश हुई।\nमार्च में अप्रैल की तुलना में कितने दिन अधिक बारिश हुई?",
   "It takes Sally 7 minutes to run a mile. How long would it take her to run 4 miles?":"एक किलोमीटर चलाने में सलमा को 7 मिनट लगते हैं।\n4 किलोमीटर चलने में उसे कितना समय लगेगा?",
   "Jackie has 9 pencils. Adam has 5 more pencils than Jackie. How many pencils does Adam have?":"जस्सी के पास 9 पेंसिल हैं।\nआदर्श के पास जस्सी की तुलना में 5 अधिक पेंसिल हैं।\nआदर्श के पास कितनी पेंसिल हैं?",
+  "Jack's hen laid 6 eggs yesterday and 3 eggs today. How many eggs did Jack's hen lay in all?":"जैक के मुर्गी ने कल 6 अंडे और आज 3 अंडे दिए। जैक के मुर्गी ने कितने अंडे दिए?",
   "Jacob and Henry were reading the same book. Henry read 9 more pages than Jacob. Jacob read 11 pages of the book. How many pages did Henry read?":"जयंत और हरि एक ही किताब पढ़ रहे थे।\nहरि ने जयंत से 9 अधिक पन्ने पढ़े।\nजयंत ने पुस्तक के 11 पन्ने पढ़े।\nहरि ने कितन पन्ने पढ़े?",
   "Jane has 9 balloons. 6 are green and the rest are blue. How many balloons are blue?":"ध्रुव और उसके दोस्त 9 पतंग उड़ाते हैं।\nकुछ पतंग एक पेड़ में फंस जाती हैं।\n6 पतंगें अभी भी उड़ रही हैं।\nपेड़ में कितनी पतंगें अटकी हैं?",
   "Janet has 8 oranges and Sharon has 4 oranges. How many oranges do they have altogether?":"जय के पास 8 संतरे हैं और श्रेया के पास 4 संतरे हैं।\nउन दोनों पास कितने संतरे हैं?",
@@ -193,6 +194,7 @@
   "There are 9 children in a classroom. 6 of them are boys. How many girls are in the classroom?":"ध्रुव और उसके दोस्त 9 पतंग उड़ाते हैं।\nकुछ पतंग एक पेड़ में फंस जाती हैं।\n6 पतंगें अभी भी उड़ रही हैं।\nपेड़ में कितनी पतंगें अटकी हैं?",
   "There are 9 kites flying in the sky. A wind blows 3 kites down on the ground. How many kites are still flying in the sky?":"आसमान में 9 पतंगें उड़ रही हैं।\nएक हवा का झोंका 3 पतंगों को जमीन पर गिरा देती हैं।\nकितनी पतंगें अभी भी आसमान में उड़ रही हैं?",
   "There are 10 plates at the dinner table. There are 5 more people than plates. How many people are at dinner?":"भोजन की टेबल पर 10 प्लेटें हैं।\nप्लेटों की तुलना में 5 अधिक लोग हैं।\nभोजन के लिए कितने लोग हैं?", 
+  "There are 10 students on the school bus. 3 students get off the bus. How many students are left on the bus?":"स्कूल बस में 10 छात्र हैं। 3 छात्र बस से उतर गए। बस में कितने छात्र बचे हैं?",
   "There are 12 cats on a fence. 1 cat jumps down off of the fence. How many cats are left on the fence?":"एक बाड़ पर 12 बिल्लियाँ हैं।\n1 बिल्ली बाड़ से नीचे कूद जाती है।\nकितनी बिल्लियाँ अभी बाड़ पर बाकी हैं ?",
   "There are 13 girls and 18 boys in a class. How many more boys are there than girls?":"एक कक्षा में 13 लड़कियां और 18 लड़के हैं।\nलड़कियों की तुलना में कितने अधिक लड़के हैं?",
   "There are 14 fish in a water tank. Kavya put 3 more fish into the tank. How many fish are there?":"एक पानी की टंकी में 14 मछलियाँ हैं।\nकरीम ने 3 और मछलियाँ टैंक में डालीं।\nअब टैंक पर कितनी मछलियां हैं?",
