--- a/assets/resources/lang/fr/i18n.json
+++ b/assets/resources/lang/fr/i18n.json
@@ -24,6 +24,7 @@
   "Bobby bought 3 more books than Gabby. Gabby bought a book. How many books did Bobby buy?":"Bobby a acheté 3 livres de plus que Gabby. Gabby a acheté un livre. Combien de livres Bobby a-t-il acheté ?",
   "Bob has 4 pencils and his sister has 8 more pencils than him. How many pencils does Bob's sister have?":"Bob a 4 crayons et sa sœur en a 8 de plus que lui. Combien de crayons la sœur de Bob a-t-elle ?",
   "books":"livres",
+  "birds": "des oiseaux",
   "Boy": "Garçon",
   "Brad has 17 balloons. 8 balloons are red and the rest are green. How many balloons are green?":"Brad a 17 ballons. 8 ballons sont rouges et les autres sont verts. Combien de ballons sont verts ?",
   "Brittany has 7 shirts in her closet.3 of them are blue and the rest are green. How many green shirts does she have?":"Brittany a 7 chemises dans son placard. Trois d'entre elles sont bleues et les autres sont vertes. Combien de chemises vertes a-t-elle ?",    
@@ -209,6 +210,7 @@
   "There are 9 children in a classroom. 6 of them are boys. How many girls are in the classroom?":"Il y a 9 enfants dans une classe. 6 d'entre eux sont des garçons. Combien de filles y a-t-il dans la classe ?",
   "There are 9 kites flying in the sky. A wind blows 3 kites down on the ground. How many kites are still flying in the sky?":"Il y a 9 cerfs-volants qui volent dans le ciel. Un vent souffle 3 cerfs-volants sur le sol. Combien de cerfs-volants volent encore dans le ciel ?",
   "There are 10 plates at the dinner table. There are 5 more people than plates. How many people are at dinner?":"Il y a 10 assiettes à la table du dîner. Il y a 5 personnes de plus que d'assiettes. Combien de personnes sont présentes au dîner ?",
+  "There are 10 students on the school bus. 3 students get off the bus. How many students are left on the bus?" : "Il y a 10 élèves dans le bus scolaire. 3 étudiants descendent du bus. Combien d'élèves reste-t-il dans le bus?",
   "There are 12 cats on a fence. 1 cat jumps down off of the fence. How many cats are left on the fence?":"Il y a 12 chats sur une clôture. 1 chat saute de la clôture. Combien de chats reste-t-il sur la clôture ?",
   "There are 13 girls and 18 boys in a class. How many more boys are there than girls?":"Il y a 13 filles et 18 garçons dans une classe. Combien de garçons y a-t-il en plus que de filles ?",
   "There are 14 fish in a water tank. Kavya put 3 more fish into the tank. How many fish are there?":"Il y a 14 poissons dans un glacière. Kerri a mis 3 autres poissons dans le glacière. Combien de poissons y a-t-il ?",
