added missing quiz questions

--- a/assets/resources/lang/fr/i18n.json
+++ b/assets/resources/lang/fr/i18n.json
@@ -242,10 +242,14 @@
   "Which group is bigger?":"quel groupe est plus grand?",
   "Which is a circle?":"Qu'est-ce qu'un cercle?",
   "Which is the biggest?":"Quel est le plus gros?",
+  "Which is the smallest?":"Quel est le plus petit?",
   "Which is a hexagon?":"Qui est un hexagone?",
   "Which is a parallelogram?":"qui est un parallélogramme?",
   "Which is a pentagon?":"Qui est un pentagone?",
+  "Which is a rectangle?":"Qu'est-ce qu'un rectangle?",
   "What is this shape?":"quelle est cette forme?",
+  "Which is a square?":"Qu'est-ce qu'un carré?",
+  "Which is a triangle?":"Qu'est-ce qu'un triangle?",
   "Which is a trapezoid?":"qui est un trapèze?",
   "Write here":"Ecrire ici",
   "years old" : "années vieille",
