which is bigger and smaller translation

--- a/assets/resources/lang/fr/i18n.json
+++ b/assets/resources/lang/fr/i18n.json
@@ -241,6 +241,8 @@
   "WhatsApp": "WhatApp",
   "Which group is bigger?":"quel groupe est plus grand?",
   "Which is a circle?":"Qu'est-ce qu'un cercle?",
+  "Which is bigger?": "Lequel est plus gros?",
+  "Which is smaller?": "Lequel est le plus petit?",
   "Which is the biggest?":"Quel est le plus gros?",
   "Which is the smallest?":"Quel est le plus petit?",
   "Which is a hexagon?":"Qui est un hexagone?",
