--- a/scripts/python/generate_random_scores.ipynb
+++ b/scripts/python/generate_random_scores.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,178 +140,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'en': [('en00', 'ambulance', 0.016129032258064516, 0.5),\n",
-       "  ('en00', 'anchor', 0.03225806451612903, 1.0),\n",
-       "  ('en01', 'auto', 0.04838709677419355, 0.5),\n",
-       "  ('en01', 'pram', 0.06451612903225806, 1.0),\n",
-       "  ('en02', 'bag', 0.08064516129032258, 0.5),\n",
-       "  ('en02', 'ball', 0.0967741935483871, 1.0),\n",
-       "  ('en03', 'balloon', 0.11290322580645161, 0.5),\n",
-       "  ('en03', 'bell', 0.12903225806451613, 1.0),\n",
-       "  ('en04', 'balloon1', 0.13978494623655913, 0.3333333333333333),\n",
-       "  ('en04', 'balloon2', 0.15053763440860213, 0.6666666666666666),\n",
-       "  ('en04', 'balloon3', 0.16129032258064513, 1.0),\n",
-       "  ('en06', 'balloon4', 0.17741935483870963, 0.5),\n",
-       "  ('en06', 'balloon5', 0.19354838709677413, 1.0),\n",
-       "  ('en05', 'balloon6', 0.22580645161290316, 1.0),\n",
-       "  ('en07', 'balloon7', 0.2419354838709677, 0.5),\n",
-       "  ('en07', 'balloon8', 0.2580645161290322, 1.0),\n",
-       "  ('en08', 'balloon9', 0.2741935483870967, 0.5),\n",
-       "  ('en08', 'balloon10', 0.2903225806451612, 1.0),\n",
-       "  ('en09', 'balloon11', 0.3010752688172042, 0.3333333333333333),\n",
-       "  ('en09', 'balloon12', 0.3118279569892472, 0.6666666666666666),\n",
-       "  ('en09', 'balloon13', 0.3225806451612902, 1.0),\n",
-       "  ('en10', 'balloon14', 0.33064516129032245, 0.25),\n",
-       "  ('en10', 'balloon15', 0.3387096774193547, 0.5),\n",
-       "  ('en10', 'balloon16', 0.34677419354838696, 0.75),\n",
-       "  ('en10', 'balloon17', 0.3548387096774192, 1.0),\n",
-       "  ('en12', 'balloon18', 0.38709677419354827, 1.0),\n",
-       "  ('en13', 'balloon19', 0.40322580645161277, 0.5),\n",
-       "  ('en13', 'balloon20', 0.41935483870967727, 1.0),\n",
-       "  ('en14', 'balloon21', 0.43548387096774177, 0.5),\n",
-       "  ('en14', 'balloon22', 0.4516129032258063, 1.0),\n",
-       "  ('en15', 'balloon23', 0.4677419354838708, 0.5),\n",
-       "  ('en15', 'balloon24', 0.4838709677419353, 1.0),\n",
-       "  ('en16', 'balloon25', 0.4903225806451611, 0.2),\n",
-       "  ('en16', 'balloon26', 0.4967741935483869, 0.4),\n",
-       "  ('en16', 'balloon27', 0.5032258064516127, 0.6),\n",
-       "  ('en16', 'balloon28', 0.5096774193548386, 0.8),\n",
-       "  ('en16', 'balloon29', 0.5161290322580644, 1.0),\n",
-       "  ('en17', 'balloon30', 0.5225806451612902, 0.2),\n",
-       "  ('en17', 'balloon31', 0.529032258064516, 0.4),\n",
-       "  ('en17', 'balloon32', 0.5354838709677419, 0.6),\n",
-       "  ('en17', 'balloon33', 0.5419354838709677, 0.8),\n",
-       "  ('en17', 'balloon34', 0.5483870967741935, 1.0),\n",
-       "  ('en19', 'balloon35', 0.5564516129032258, 0.25),\n",
-       "  ('en19', 'balloon36', 0.564516129032258, 0.5),\n",
-       "  ('en19', 'balloon37', 0.5725806451612903, 0.75),\n",
-       "  ('en19', 'balloon38', 0.5806451612903225, 1.0),\n",
-       "  ('en20', 'balloon39', 0.596774193548387, 0.5),\n",
-       "  ('en20', 'balloon40', 0.6129032258064515, 1.0),\n",
-       "  ('en21', 'balloon41', 0.6451612903225805, 1.0),\n",
-       "  ('en22', 'balloon42', 0.6774193548387095, 1.0),\n",
-       "  ('en23', 'balloon43', 0.693548387096774, 0.5),\n",
-       "  ('en23', 'balloon44', 0.7096774193548385, 1.0),\n",
-       "  ('en32', 'balloon45', 0.725806451612903, 0.5),\n",
-       "  ('en32', 'balloon46', 0.7419354838709675, 1.0),\n",
-       "  ('en24', 'balloon47', 0.758064516129032, 0.5),\n",
-       "  ('en24', 'balloon48', 0.7741935483870965, 1.0),\n",
-       "  ('en25', 'balloon49', 0.7849462365591395, 0.3333333333333333),\n",
-       "  ('en25', 'balloon50', 0.7956989247311825, 0.6666666666666666),\n",
-       "  ('en25', 'balloon51', 0.8064516129032255, 1.0),\n",
-       "  ('en26', 'balloon52', 0.82258064516129, 0.5),\n",
-       "  ('en26', 'balloon53', 0.8387096774193545, 1.0),\n",
-       "  ('en28', 'balloon54', 0.854838709677419, 0.5),\n",
-       "  ('en28', 'balloon55', 0.8709677419354835, 1.0),\n",
-       "  ('en29', 'balloon56', 0.887096774193548, 0.5),\n",
-       "  ('en29', 'balloon57', 0.9032258064516125, 1.0),\n",
-       "  ('en30', 'balloon58', 0.919354838709677, 0.5),\n",
-       "  ('en30', 'balloon59', 0.9354838709677415, 1.0),\n",
-       "  ('en31', 'balloon60', 0.9677419354838706, 1.0),\n",
-       "  ('en33', 'balloon61', 0.983870967741935, 0.5),\n",
-       "  ('en33', 'balloon62', 0.9999999999999996, 1.0)],\n",
-       " 'maths': [('maths00', 'challenge1', 0.015625, 0.5),\n",
-       "  ('maths00', 'challenge5', 0.03125, 1.0),\n",
-       "  ('maths01', 'challenge6', 0.0625, 1.0),\n",
-       "  ('maths02', 'challenge7', 0.078125, 0.5),\n",
-       "  ('maths02', 'challenge8', 0.09375, 1.0),\n",
-       "  ('maths03', 'challenge9', 0.10416666666666667, 0.3333333333333333),\n",
-       "  ('maths03', 'challenge10', 0.11458333333333334, 0.6666666666666666),\n",
-       "  ('maths03', 'challenge11', 0.125, 1.0),\n",
-       "  ('maths04', 'challenge12', 0.15625, 1.0),\n",
-       "  ('maths05', 'challenge13', 0.16666666666666666, 0.3333333333333333),\n",
-       "  ('maths05', 'challenge14', 0.17708333333333331, 0.6666666666666666),\n",
-       "  ('maths05', 'challenge15', 0.18749999999999997, 1.0),\n",
-       "  ('maths06', 'challenge16', 0.20312499999999997, 0.5),\n",
-       "  ('maths06', 'challenge17', 0.21874999999999997, 1.0),\n",
-       "  ('maths07', 'challenge18', 0.22656249999999997, 0.25),\n",
-       "  ('maths07', 'challenge19', 0.23437499999999997, 0.5),\n",
-       "  ('maths07', 'challenge20', 0.24218749999999997, 0.75),\n",
-       "  ('maths07', 'challenge21', 0.24999999999999997, 1.0),\n",
-       "  ('maths08', 'challenge22', 0.265625, 0.5),\n",
-       "  ('maths08', 'challenge23', 0.28125, 1.0),\n",
-       "  ('maths09', 'challenge24', 0.296875, 0.5),\n",
-       "  ('maths09', 'challenge25', 0.3125, 1.0),\n",
-       "  ('maths10', 'challenge26', 0.328125, 0.5),\n",
-       "  ('maths10', 'challenge27', 0.34375, 1.0),\n",
-       "  ('maths11', 'challenge28', 0.3515625, 0.25),\n",
-       "  ('maths11', 'challenge29', 0.359375, 0.5),\n",
-       "  ('maths11', 'challenge30', 0.3671875, 0.75),\n",
-       "  ('maths11', 'challenge31', 0.375, 1.0),\n",
-       "  ('maths12', 'challenge32', 0.3854166666666667, 0.3333333333333333),\n",
-       "  ('maths12', 'challenge33', 0.39583333333333337, 0.6666666666666666),\n",
-       "  ('maths12', 'challenge34', 0.40625000000000006, 1.0),\n",
-       "  ('maths13', 'challenge35', 0.41406250000000006, 0.25),\n",
-       "  ('maths13', 'challenge36', 0.42187500000000006, 0.5),\n",
-       "  ('maths13', 'challenge37', 0.42968750000000006, 0.75),\n",
-       "  ('maths13', 'challenge38', 0.43750000000000006, 1.0),\n",
-       "  ('maths14', 'challenge39', 0.44531250000000006, 0.25),\n",
-       "  ('maths14', 'challenge40', 0.45312500000000006, 0.5),\n",
-       "  ('maths14', 'challenge41', 0.46093750000000006, 0.75),\n",
-       "  ('maths14', 'challenge42', 0.46875000000000006, 1.0),\n",
-       "  ('maths15', 'challenge43', 0.47656250000000006, 0.25),\n",
-       "  ('maths15', 'challenge44', 0.48437500000000006, 0.5),\n",
-       "  ('maths15', 'challenge45', 0.49218750000000006, 0.75),\n",
-       "  ('maths15', 'challenge46', 0.5, 1.0),\n",
-       "  ('maths16', 'challenge47', 0.515625, 0.5),\n",
-       "  ('maths16', 'challenge48', 0.53125, 1.0),\n",
-       "  ('maths17', 'challenge49', 0.546875, 0.5),\n",
-       "  ('maths17', 'challenge50', 0.5625, 1.0),\n",
-       "  ('maths18', 'challenge51', 0.578125, 0.5),\n",
-       "  ('maths18', 'challenge52', 0.59375, 1.0),\n",
-       "  ('maths19', 'challenge53', 0.609375, 0.5),\n",
-       "  ('maths19', 'challenge54', 0.625, 1.0),\n",
-       "  ('maths20', 'challenge55', 0.640625, 0.5),\n",
-       "  ('maths20', 'challenge56', 0.65625, 1.0),\n",
-       "  ('maths21', 'challenge57', 0.671875, 0.5),\n",
-       "  ('maths21', 'challenge58', 0.6875, 1.0),\n",
-       "  ('maths22', 'challenge59', 0.69375, 0.2),\n",
-       "  ('maths22', 'challenge60', 0.7, 0.4),\n",
-       "  ('maths22', 'challenge61', 0.7062499999999999, 0.6),\n",
-       "  ('maths22', 'challenge62', 0.7124999999999999, 0.8),\n",
-       "  ('maths22', 'challenge63', 0.7187499999999999, 1.0),\n",
-       "  ('maths23', 'challenge64', 0.7291666666666665, 0.3333333333333333),\n",
-       "  ('maths23', 'challenge65', 0.7395833333333331, 0.6666666666666666),\n",
-       "  ('maths23', 'challenge66', 0.7499999999999998, 1.0),\n",
-       "  ('maths24', 'challenge67', 0.7604166666666664, 0.3333333333333333),\n",
-       "  ('maths24', 'challenge68', 0.770833333333333, 0.6666666666666666),\n",
-       "  ('maths24', 'challenge69', 0.7812499999999997, 1.0),\n",
-       "  ('maths25', 'challenge70', 0.7916666666666663, 0.3333333333333333),\n",
-       "  ('maths25', 'challenge71', 0.8020833333333329, 0.6666666666666666),\n",
-       "  ('maths25', 'challenge72', 0.8124999999999996, 1.0),\n",
-       "  ('maths26', 'challenge73', 0.8177083333333329, 0.16666666666666666),\n",
-       "  ('maths26', 'challenge74', 0.8229166666666663, 0.3333333333333333),\n",
-       "  ('maths26', 'challenge75', 0.8281249999999997, 0.5),\n",
-       "  ('maths26', 'challenge76', 0.833333333333333, 0.6666666666666666),\n",
-       "  ('maths26', 'challenge77', 0.8385416666666664, 0.8333333333333334),\n",
-       "  ('maths26', 'challenge78', 0.8437499999999998, 1.0),\n",
-       "  ('maths27', 'challenge79', 0.8489583333333331, 0.16666666666666666),\n",
-       "  ('maths27', 'challenge80', 0.8541666666666665, 0.3333333333333333),\n",
-       "  ('maths27', 'challenge81', 0.8593749999999999, 0.5),\n",
-       "  ('maths27', 'challenge82', 0.8645833333333333, 0.6666666666666666),\n",
-       "  ('maths27', 'challenge83', 0.8697916666666666, 0.8333333333333334),\n",
-       "  ('maths27', 'challenge84', 0.875, 1.0),\n",
-       "  ('maths28', 'challenge85', 0.890625, 0.5),\n",
-       "  ('maths28', 'challenge86', 0.90625, 1.0),\n",
-       "  ('maths29', 'challenge87', 0.9375, 1.0),\n",
-       "  ('maths30', 'challenge88', 0.9479166666666666, 0.3333333333333333),\n",
-       "  ('maths30', 'challenge89', 0.9583333333333333, 0.6666666666666666),\n",
-       "  ('maths30', 'challenge90', 0.9687499999999999, 1.0)]}"
+       "70"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "subjects"
+    "len(subjects['en'])"
    ]
   },
   {
