--- a/assets/resources/lang/fr/i18n.json
+++ b/assets/resources/lang/fr/i18n.json
@@ -396,7 +396,7 @@
   "Number Sense 1-10": "Sens des nombres 1-10",
   "Number Sense 1-5": "Sens des nombres 1-5",
   "Number Sense 11-20": "Sens du nombre 11-20",
-  "Number Series": "Série de numéros",
+  "Number Series ": "Série de numéros",
   "Number Series 1": "Numéro Série 1",
   "Number Series 1- 9": "Série de numéros 1-9",
   "Number Series 1-8": "Série de numéros 1-8",
@@ -448,6 +448,7 @@
   "Shapes 4": "Formes 4",
   "Shapes Advanced": "Formes avancées",
   "Shapes and Solids": "Formes et solides",
+  "ShapeTractor":"Tracteur de forme",
   "sheep": "brebis",
   "Skip 2's Backward": "Sauter 2 en arrière",
   "Skip By 10's": "Passer par 10",
