--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -103,17 +103,17 @@
   "Lena has 12 books. She donates 8 books to her class library. How many books does Lena have left?":"लीना के पास 12 किताबें हैं।\nवह अपनी कक्षा की लाइब्रेरी में  8 किताबें दान करती हैं।\nलीना के पास कितनी किताबें बाकि हैं?",
   "Literacy": "हिन्दी",
   "Lucy has 8 pencils. She loses 7 of them. How many pencils does Lucy have left?":"लतिका के पास 8 पेंसिल हैं।\nवह उनमें से 7 पेंसिल खो देती है।\nलतिका के पास कितने पेंसिल बचे हैं?",
-  "Lucy is 9 years old. Her sister Julie is@6 years old. How much older is Lucy than her sister Julie?":"लतिका 9 साल की है।\nउसकी बहन जूली  6 साल की है।\nलतिका अपनी बहन जूली से कितनी बड़ी है?",
+  "Lucy is 9 years old. Her sister Julie is 6 years old. How much older is Lucy than her sister Julie?":"लतिका 9 साल की है।\nउसकी बहन जूली  6 साल की है।\nलतिका अपनी बहन जूली से कितनी बड़ी है?",
   "Magan bought 8 candies and Jane bought 9 candies. How many candies did they buy in all?":"मीना ने 8 कैंडी खरीदी और जय ने 9 कैंडी खरीदी।\nउन्होंने सभी में कितने कैंडी खरीदे?",
   "mangos": "आम",
   "marbles":"मार्बल",
-  "Maria read 3 books and Stacy read@5 books. How many more books did Stacy read than Maria?":"मीशा ने 3 किताबें पढ़ीं और सीमा ने 5 किताबें पढ़ीं।\nसीमा ने मीशा की तुलना में कितनी अधिक किताबें पढ़ीं?",
+  "Maria read 3 books and Stacy read 5 books. How many more books did Stacy read than Maria?":"मीशा ने 3 किताबें पढ़ीं और सीमा ने 5 किताबें पढ़ीं।\nसीमा ने मीशा की तुलना में कितनी अधिक किताबें पढ़ीं?",
   "Marin has 7 balls. Ellen has 6 more balls than Marin. How many balls does Ellen have?":"मधु के पास 7 गेंदें हैं।\nमधु की तुलना में ईशा के पास 6 और गेंदें हैं।\nईशा के पास कितनी गेंदें हैं?",  
   "MatchBox": "माच करें",
   "Maths": "गणित",
   "Marco bought 12 fish. He put an equal number of fish into 4 tanks. How many fish are in each tank?":"अमीर ने 12 मछलियाँ खरीदीं।\nउन्होंने 4 टैंकों में समान संख्या में मछलियां डालीं।\nप्रत्येक टैंक में कितनी मछलियाँ हैं?",
   "Mary is decorating for a birthday party. She blew up 6 balloons this morning and 5 balloons this afternoon. How many balloons did she blow up in all?":"माला एक जन्मदिन की पार्टी के लिए सजावट कर रही है।\nउसने आज सुबह 6 गुब्बारे फुलाये और 5 गुब्बारे दोपहर को फुलाये ।\nउसने कुल मिलाकर कितने गुब्बारे फुलाये ?",
-  "Maya served 3 yams at lunch and@5 yams during dinner. How many yams were served during the day?":"माया ने दोपहर के भोजन में 3 अंडे और रात के खाने\nके दौरान 5 अंडे परोसे।\nपूरे दिन में कितने अंडे परोसे गए?  ",
+  "Maya served 3 yams at lunch and 5 yams during dinner. How many yams were served during the day?":"माया ने दोपहर के भोजन में 3 अंडे और रात के खाने\nके दौरान 5 अंडे परोसे।\nपूरे दिन में कितने अंडे परोसे गए?  ",
   "Maya has 5 marbles. Jaden has 8 marbles. How many marbles do they have altogether?":"माया के पास 5 मार्बल हैं।\nजया के पास  8 मार्बल हैं।\nउनके पास कुल मिलाकर कितने मार्बल हैं?", 
   "Megan writes 14 letters to friends and family. 7 letters are for her friends and the rest are for her family. How many letters are for her family?":"मेधा ने दोस्तों और परिवार को 14 पत्र लिखे।\n7 पत्र उसके दोस्तों के लिए लिखे हैं और बाकी उसके परिवार के लिखे हैं।\nउसने उसके परिवार के लिए कितने पत्र लिखे हैं?",
   "Mia brought 10 jars of homemade jam to the market. She sold some jars and had 3 jars left. How many jars did she sell at the market?":"मेघा ने घर के बने जाम के 10 जार बाजार में प्रदर्शित किया ।\nउसने कुछ जार बेचे और 3 जार बचे थे।\nउसने बाजार में कितने जार बेचे?",
@@ -123,7 +123,7 @@
   "Miranda baked 18 brownies. She put an equal number of brownies on to 2 plates. How many brownies are on each plate?":"महक ने 18 लड्डू बनाया ।\nउसने  2 प्लेटों पर समान संख्या में लड्डू रखी।\nप्रत्येक प्लेट पर कितने लड्डू होते हैं?",
   "Mr. Simpson's class has 18 books. He arranges them equally on 3 shelves. How many books are on each shelf?":"श्राहुल की कक्षा में 18 पुस्तकें हैं।\n वह उन्हें 3 अलमारियों पर समान रूप से व्यवस्थित करता है।\n प्रत्येक शेल्फ पर कितनी किताबें रखी हुई हैं?",
   "Ms. Hannah is playing a hide-and-seek game with her 11 students. She finds 3 students. How many students are still hiding?":"मिस हिना अपने 11 छात्रों के साथ लुका-छिपी का खेल खेल रही हैं।\nउहोने 3 छात्र को खोज दिया ।\nकितने छात्र अभी भी छिपे हुए हैं?",
-  "Ms. Jones ordered 8 bags of sugar.@5 bags are delivered today. The rest will be delivered tomorrow. How many bags of sugar will be delivered tomorrow?":"मिस जया ने चीनी के 8 बैग का पहुंचाया गया था ।\n5 बैग आज पहुं गए हैं।\nबाकी बैग कल पहुंचा दिए जाएंगे।\nकल चीनी के कितने बैग पहुंचाए जाएंगे?",
+  "Ms. Jones ordered 8 bags of sugar. 5 bags are delivered today. The rest will be delivered tomorrow. How many bags of sugar will be delivered tomorrow?":"मिस जया ने चीनी के 8 बैग का पहुंचाया गया था ।\n5 बैग आज पहुं गए हैं।\nबाकी बैग कल पहुंचा दिए जाएंगे।\nकल चीनी के कितने बैग पहुंचाए जाएंगे?",
   "Ms. Dawson has 12 students in her class. Some students are absent and 7 students are present. How many students are absent?":"मिस धवन की कक्षा में 12 छात्र हैं।\nकुछ छात्र अनुपस्थित हैं और  7 छात्र उपस्थित हैं।\nकितने छात्र अनुपस्थित हैं?",
   "Name   :": "नाम   :",
   "Name":"नाम :",
@@ -138,7 +138,7 @@
   "parallelogram":"समानांतर चतुर्भुज",
   "Parent":"माता-पिता",
   "Paul has 7 plums. Brian has 4 more plums than Paul. How many plums does Brian have?":"पंकज के पास 7 प्लम हैं। पंकज की तुलना में कपिल के पास 4 और प्लम हैं। कपिल के पास कितने प्लम हैं?",
-  "Peter has 4 marbles. Sue gives Peter some marbles and now he has@6 marbles in all. How many marbles did Sue give Peter?":"प्रतीक के पास 4 मार्बल हैं।\nशमीन प्रतीक को कुछ मार्बल देता है और अब उसके पास 6 मार्बल बाकी हैं।\nशामीन ने प्रतीक को कितने मार्बल दिए थे?",
+  "Peter has 4 marbles. Sue gives Peter some marbles and now he has 6 marbles in all. How many marbles did Sue give Peter?":"प्रतीक के पास 4 मार्बल हैं।\nशमीन प्रतीक को कुछ मार्बल देता है और अब उसके पास 6 मार्बल बाकी हैं।\nशामीन ने प्रतीक को कितने मार्बल दिए थे?",
   "Peter read 6 pages of his book before lunch. After lunch he read some more. If Peter read 9 pages in all, how many pages did he read after lunch?":"प्रतिक ने भोजन से पहले किताब के 6 पन्ने पढ़े।\nभोजन के बाद उन्होंने कुछ और पन्ने पढ़ा।\nअगर प्रतिक कुल मिलाकर 9 पन्ने पढ़ते हैं  तो भोजन के बाद उन्होंने कितने पन्ने पढ़े?",
   "Phone number :": "फ़ोन नंबर :",
   "Profile": "प्रोफ़ाइल",
@@ -153,7 +153,7 @@
   "Shante picked 6 mangos from a tree. He put an equal number of mangos into 3 boxes. How many mangos did he put in each box?":"सचिन ने एक पेड़ से 6 आम निकाले।\nउन्होंने आमों की एक समान संख्या को 3 बक्से में रखा।\nप्रत्येक बक्से में उसने कितने आम रखे थे?",
   "Sandy is 5 years old. Mia is 7 years older than Sandy. How old is Mia?":"सैंडी की उम्र 5 साल है। मीरा सैंडी से 7 साल बड़ी हैं।\n मीरा की उम्र कितनी है?",
   "Sam has 12 math problems for homework. He answered 3 of them. How many more math problems does Sam have left to answer?":"सुंदर को घर का पाठ के लिए 12 प्रश्न की समस्याएं दिए हैं।\nउसने उनमें से 3 प्रश्न का जवाब दिया।\nसुंदर को और कितनी गणित की प्रश्न का जवाब देना बाकी है?",
-  "Sam ate 7 cookies and Jane ate@2 cookies. How many fewer cookies did Jane eat than Sam?":"सुंदर ने 7 कुकीज और जय ने  2 कुकीज खाईं।\nसुंदर की तुलना में जय ने कितने कम कुकीज़ खाए?",
+  "Sam ate 7 cookies and Jane ate 2 cookies. How many fewer cookies did Jane eat than Sam?":"सुंदर ने 7 कुकीज और जय ने  2 कुकीज खाईं।\nसुंदर की तुलना में जय ने कितने कम कुकीज़ खाए?",
   "Sara has 14 pencils in her bag. She let her friends borrow 7 of them. How many pencils does Sara have left?":"मेधा ने दोस्तों और परिवार को 14 पत्र लिखे।\n7 पत्र उसके दोस्तों के लिए लिखे हैं और बाकी उसके परिवार के लिखे हैं।\nउसने उसके परिवार के लिए कितने पत्र लिखे हैं?",
   "Sarah is 5 years old. Her sister Komal is 2 years older than Sarah. How old is Komal?":"सारा 5 साल की है।\nउसकी बहन कृष्णा सारा से 2 साल बड़ी है।\nकृष्ण कितने साल की हैं?",
   "Sarah picked 6 flowers. She put an equal number of flowers into 2 vases. How many flowers did she put in each vase?":"सारा ने 6 फूल लाये।\nउसने फूलों की समान मात्रा 2 फूलदानों में डाल दी।\nप्रत्येक फूलदान में उसने कितने फूल लगाए?",
