--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -250,5 +250,5 @@
   "10 sides":"10 भुजाएँ",
   "20 students were equally divided into 4 groups by the teacher. How many students are in each group?":"20 छात्रों को शिक्षक द्वारा 4 दलों में समान रूप से विभाजित किया गया था।\nप्रत्येक दाल में कितने छात्र हैं?",
   "Add Teacher":"शिक्षक",
-  "Library": "पुस्तकालय"
+  "Library": "संग्रह"
 }
