Added Division in i18n Files

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -44,6 +44,7 @@
   "David and his friends fly 9 kites. Some kites get stuck in a tree. 6 kites are still flying. How many kites are stuck in the tree?":"David and his friends fly 9 kites. Some kites get stuck in a tree. 6 kites are still flying. How many kites are stuck in the tree?",
   "Deanna has 5 more puzzles than Fatou. Fatou has 3 puzzles. How many puzzles does Deanna have?":"Deepa has 5 more puzzles than Pradip. Pradip has 3 puzzles. How many puzzles does Deepa have?",
   "Done":"Done",
+  "Division":"Division",
   "eggs":"eggs",
   "eight": "eight",
   "Email": "Email",
