--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -44,6 +44,7 @@
   "David and his friends fly 9 kites. Some kites get stuck in a tree. 6 kites are still flying. How many kites are stuck in the tree?":"ध्रुव और उसके दोस्त 9 पतंग उड़ाते हैं।\nकुछ पतंग एक पेड़ में फंस जाती हैं।\n6 पतंगें अभी भी उड़ रही हैं।\nपेड़ में कितनी पतंगें अटकी हैं?",
   "Deanna has 5 more puzzles than Fatou. Fatou has 3 puzzles. How many puzzles does Deanna have?":"एक फुटबॉल टीम ने पहले हाफ में 3 गोल किए।\nफिर उन्होंने दूसरे हाफ में अधिक गोल किए।\nउन्होंने 5 गोल से गेम जीता! दूसरे हाफ में उन्होंने कितने गोल किए?",
   "Done":"हुआ",
+  "Division":"विभाजन",
   "eggs":"अंडे",
   "eight": "आठ",
   "Email": "ईमेल",
