Changed shapetractor chapter name in puzzle

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -197,6 +197,7 @@
   "Shape Pattern":"Shape Patten",
   "Shape Sequence":"Shape Sequence",
   "Shape Series":"Shape Series",
+  "Shape Tractor":"Shape Tractor",
   "Shapes and Objects":"Shapes and Objects",
   "Shapes":"Shapes",
   "Shelby earns star stickers when she does math at school. Yesterday, Shelby earned 4 stars. Today, she earned 3 more. How many stars did Shelby earn in all?":"Suman earns star stickers when she does math at school. Yesterday, Suman earned 4 stars. Today, she earned 3 more. How many stars did Suman earn in all?",
