--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -197,6 +197,7 @@
   "Shape Pattern":"आकार पैटर्न",
   "Shape Sequence":"आकृति अनुक्रम",
   "Shape Series":"आकार श्रृंखला",
+  "Shape Tractor":"पहेली हल करो",
   "Shapes and Objects":"आकृतियाँ और वस्तुएँ",
   "Shapes":"आकार",
   "Shelby earns star stickers when she does math at school. Yesterday, Shelby earned 4 stars. Today, she earned 3 more. How many stars did Shelby earn in all?":"जब सारा स्कूल में गणित करती है तो वह स्टार स्टिकर कमाती है।\nकल सारा ने 4 स्टार कमाए।\nआज उसने 3 और स्टार कमाए।\nसारा ने कितने स्टार कमाए?",
