Added More string in i18n files

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -152,6 +152,7 @@
   "Millie has 9 bracelets. She loses 2 of them. How many bracelets does Millie have left?":"Sheetal has 9 bracelets. She loses 2 of them. How many bracelets does Sheetal have left?",
   "Miranda baked 18 brownies. She put an equal number of brownies on to 2 plates. How many brownies are on each plate?":"Meera baked 18 cupcakes. She put an equal number of cupcakes on to 2 plates. How many cupcakes are on each plate?",
   "Mr. Simpson's class has 18 books. He arranges them equally on 3 shelves. How many books are on each shelf?":"Mr. Rahul's class has 18 books. He arranges them equally on 3 shelves. How many books are on each shelf?",
+  "More...":"More...",
   "Ms. Dawson has 12 students in her class. Some students are absent and 7 students are present. How many students are absent?":"Ms. Poonam has 12 students in her class. Some students are absent and 7 students are present. How many students are absent?",
   "Ms. Hannah is playing a hide-and-seek game with her 11 students. She finds 3 students. How many students are still hiding?":"Ms. Rani is playing a hide-and-seek game with her 11 students. She finds 3 students. How many students are still hiding?",
   "Ms. Jones ordered 8 bags of sugar. 5 bags are delivered today. The rest will be delivered tomorrow. How many bags of sugar will be delivered tomorrow?":"Ms. Tara ordered 8 bags of sugar. 5 bags are delivered today. The rest will be delivered tomorrow. How many bags of sugar will be delivered tomorrow?",
