--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -152,6 +152,7 @@
   "Millie has 9 bracelets. She loses 2 of them. How many bracelets does Millie have left?":"मीरा के पास 9 कंगन हैं।\nवह उनमें से 2  कंगन खो देता है।\nमीरा के पास कितने कंगन बची हैं?",
   "Miranda baked 18 brownies. She put an equal number of brownies on to 2 plates. How many brownies are on each plate?":"महक ने 18 लड्डू बनाया ।\nउसने  2 प्लेटों पर समान संख्या में लड्डू रखी।\nप्रत्येक प्लेट पर कितने लड्डू होते हैं?",
   "Mr. Simpson's class has 18 books. He arranges them equally on 3 shelves. How many books are on each shelf?":"श्राहुल की कक्षा में 18 पुस्तकें हैं।\n वह उन्हें 3 अलमारियों पर समान रूप से व्यवस्थित करता है।\n प्रत्येक शेल्फ पर कितनी किताबें रखी हुई हैं?",
+  "More...":"अधिक...",
   "Ms. Dawson has 12 students in her class. Some students are absent and 7 students are present. How many students are absent?":"मिस धवन की कक्षा में 12 छात्र हैं।\nकुछ छात्र अनुपस्थित हैं और  7 छात्र उपस्थित हैं।\nकितने छात्र अनुपस्थित हैं?",
   "Ms. Hannah is playing a hide-and-seek game with her 11 students. She finds 3 students. How many students are still hiding?":"मिस हिना अपने 11 छात्रों के साथ लुका-छिपी का खेल खेल रही हैं।\nउहोने 3 छात्र को खोज दिया ।\nकितने छात्र अभी भी छिपे हुए हैं?",
   "Ms. Jones ordered 8 bags of sugar. 5 bags are delivered today. The rest will be delivered tomorrow. How many bags of sugar will be delivered tomorrow?":"मिस जया ने चीनी के 8 बैग का पहुंचाया गया था ।\n5 बैग आज पहुं गए हैं।\nबाकी बैग कल पहुंचा दिए जाएंगे।\nकल चीनी के कितने बैग पहुंचाए जाएंगे?",
