--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -57,6 +57,7 @@
   "cone":"cone",
   "Confirm": "Confirm",
   "Contact Us": "Contact us",
+  "Contact": "Contact",
   "Continue": "Continue",
   "Count and Match":"Count and Match",
   "Count and Pair":"Count and Pair",
