Added digital skills string in i18n files

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -67,6 +67,7 @@
   "Deanna has 5 more puzzles than Fatou. Fatou has 3 puzzles. How many puzzles does Deanna have?":"Deepa has 5 more puzzles than Pradip. Pradip has 3 puzzles. How many puzzles does Deepa have?",
   "Diego has 11 mangos in a basket. Diego gives 4 mangos to his sister. How many mangos are left in the basket?":"Swamy has 11 mangos in a basket. Swamy gives 4 mangos to his sister. How many mangos are left in the basket?",
   "Division":"Division",
+  "Digital Skills":"Digital Skills",
   "Done":"Done",
   "eggs":"eggs",
   "eight": "eight",
