--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -67,6 +67,7 @@
   "Deanna has 5 more puzzles than Fatou. Fatou has 3 puzzles. How many puzzles does Deanna have?":"एक फुटबॉल टीम ने पहले हाफ में 3 गोल किए।\nफिर उन्होंने दूसरे हाफ में अधिक गोल किए।\nउन्होंने 5 गोल से गेम जीता! दूसरे हाफ में उन्होंने कितने गोल किए?",
   "Diego has 11 mangos in a basket. Diego gives 4 mangos to his sister. How many mangos are left in the basket?":"धीर के पास एक टोकरी में 11 आम होते हैं।\nधीर अपनी बहन को 4 आम देता है।\nटोकरी में कितने आम बचे हैं?",
   "Division":"विभाजन",
+  "Digital Skills":"डिजिटल कौशल",
   "Done":"हुआ",
   "eggs":"अंडे",
   "eight": "आठ",
