Fixes #1277 hindi translation of which is bigger

--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -273,6 +273,7 @@
   "Which group is bigger?":"कौन सा समूह बड़ा है?",
   "Which is a circle?":"इनमें से कौन सा चक्र हैं?",
   "Which is the biggest?":"कौन सा सबसे बड़ा है?",
+  "Which is bigger?":"कौन सा बड़ा है?",
   "Write here":"यहाँ लिखें",
   "Yesterday, the store had 7 bags of rice. Today, the store has 2 bags of rice. How many bags of rice did the store sell?":"कल  दुकान में चावल के 7 बैग थे।\nआज दुकान में चावल के 2 बैग हैं।\nदुकान ने कितने बैग चावल बेचे?",
   "You and your sister share 10 bags of chips equally. How many bags of chips will each of you get?":"आप और आपकी बहन समान रूप से चिप्स के 10 बैग बांटते हैं।\nचिप्स के कितने बैग प्रत्येक को मिलेंगे?",
