Added Class in i18.json

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -52,6 +52,7 @@
   "Children are drawing pictures to decorate their classroom. The boys draw 11 pictures and the girls draw 20. How many more pictures do girls draw than boys?":"Children are drawing pictures to decorate their classroom. The boys draw 11 pictures and the girls draw 20. How many more pictures do girls draw than boys?",
   "Choose your avatar": "Choose your avatar",
   "Choose Your Language": "Choose Your Language",
+  "Class  :": "Class  :",
   "circle": "circle",
   "Click x1 times on number x2!": "Click x1 times on number x2!",
   "cone":"cone",
