--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -54,6 +54,7 @@
   "Choose your avatar": "अपना अवतार चुनें",
   "Choose Your Language": "अपना भाषा चुनें",
   "circle": "वृत्त",
+  "Class  :": "वर्ग  :",
   "Click x1 times on number x2!": "नंबर x2 पर x1 बार क्लिक करें!",
   "cone":"शंकु",
   "Confirm": "पुष्टि करें",
