added sentence in i18n.

--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -72,6 +72,7 @@
   "Division":"विभाजन",
   "Digital Skills":"डिजिटल कौशल",
   "Done":"हुआ",
+  "Do you want to open now?": "क्या आप अभी खोलना चाहते हैं?",
   "eggs":"अंडे",
   "eight": "आठ",
   "Email :": "ईमेल :",
@@ -167,6 +168,7 @@
   "Nassir picks up a 17-page book. He reads 9 pages. How many pages does he have left to read?":"नासिर ने 17 पन्नों की एक किताब निकाली।\nवह 9 पेज पढ़ता है।\nउसके पास पढ़ने के लिए कितने पन्ने बाकी हैं ?",
   "New Level Unlocked": "नया स्तर खुला",
   "New World Unlocked": "नई दुनिया खुला",
+  "New assignment has been assigned to you": "नया कार्य आपको सौंपा गया है",
   "Nick has 13 oranges. He eats 5 of them. How many oranges does he have left?":"नील में 13 संतरे हैं।\nवह उनमें से  5 खाता है।\nउसके पास कितने संतरे बचे हैं?",
   "nine": "नौ",
   "Objects and shapes":"वस्तु आकार",
